# stumpless

./: CMakeLists.txt  ChangeLog.md  INSTALL.md  README.md
.github/workflows/: analysis.yml  cygwin.yml  linux.yml  locale.yml  mac.yml  windows.yml
docs/: dependencies.md  development.md
include/private/: error.h  param.h
include/private/config/: have_stdatomic.h
include/private/config/locale/: bg-bg.h  bn-in.h  cz-cz.h  da-dk.h  de-de.h  el-gr.h  en-us.h  es-es.h  fr-fr.h  he-il.h  hi-in.h  hu-hu.h  it-it.h  ja-jp.h  ko-kr.h  pl-pl.h  pt-br.h  si-lk.h  sk-sk.h  sq-al.h  sv-se.h  sw-ke.h  te-in.h  tr-tr.h  zh-cn.h
include/private/config/wrapper/: socket.h  thread_safety.h
include/stumpless/: entry.h  error.h  facility.h  option.h  param.h  severity.h  target.h
l10n/fr-fr/: INSTALL.md  README.md
l10n/fr-fr/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependencies.md  development.md  portability.md  style.md  thread_safety.md  vision.md
src/: cache.c  element.c  entry.c  error.c  facility.c  param.c  severity.c  strhelper.c  target.c
src/config/: have_stdatomic.c
src/windows/: stumpless.def
test/function/: entry.cpp  facility.cpp  param.cpp  severity.cpp  target.cpp
tools/check_headers/: stumpless.yml  stumpless_private.yml
tools/cmake/: benchmark.cmake  chain.cmake  config_files.cmake  cpp.cmake  cpp_test.cmake  examples.cmake  function_tests.cmake  fuzz_tests.cmake  gtest.cmake  journald.cmake  network.cmake  options.cmake  performance_tests.cmake  single_file.cmake  socket.cmake  sqlite3.cmake  test.cmake  thread_safety_tests.cmake  wel.cmake
tools/pkg-config/: libstumpless.pc.in
tools/portage/: libstumpless.ebuild.in
